# tracer

./: Cargo.toml  README.md
src/: algorythms.rs  camera.rs  main.rs  math.rs  ray.rs  traits.rs
src/camera/: perspective.rs
src/renderer/: debug_normal.rs  material.rs  mod.rs  simple_renderer.rs
src/sampler/: mod.rs  normal.rs  simple.rs  simple_diffuse.rs
