[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.1"
derive_builder = "0.11.2"
image = "0.24.3"
indicatif = "0.17.0"
nalgebra = "0.31.1"
tobj = { version = "3.2.3", features = ["log"]}

[profile.release]
# For better flamegraph
debug = true
